# MingwInstallerMod

./: .gitignore  CMakeLists.txt  README.md  save_logo.py
.github/workflows/: ci-msvc.yml
src/: BuildInfo.hpp  Manager.cpp  Manager.hpp  Picture.hpp  flatjson.hpp  home.cpp  main.cpp  page0.cpp  page1.cpp  page2.cpp  page3.cpp  page4.cpp  page5.cpp  page6.cpp  page7.cpp  page8.cpp  page_about.cpp  pages.hpp  shortcut.cpp  shortcut.hpp  version.hpp
src/lzma2201/C/: Lzma2Dec.h
